@@ -213,6 +213,7 @@ The room command handles Multi\-User Chat room actions\&.
  \fBremove\fR             	remove the current room from the roster (you must have left this room before)
  \fBtopic\fR              	set topic for current room
  \fBunlock\fR             	unlock current room (if you are the owner)
+ \fBdestroy\fR [reason]   	destroy the current room (use with care!)
  \fBwhois\fR nick         	display MUC information about "nick"
 
  \fBinvite\fR jid [reason]	invite jid to the current room
